--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -8,6 +8,7 @@ body {
 	margin-left: 75px;
 	padding-bottom: 15px;
 	padding-top: 15px;
+	border-radius: 10px;
 }
 
 .comment{
@@ -16,6 +17,7 @@ body {
 	padding-bottom: 15px;
 	padding-top: 15px;
 	background-color: #CCFFCC;
+	border-radius: 10px;
 }
 
 .right{
@@ -30,6 +32,8 @@ body {
 	padding: 15px;
 	margin: 10px;
 	background-color: #CCFFCC;
+	border-radius: 10px;
+
 }
 .center {
 	text-align: center;
